add start and clean scripts

--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "",
   "author": "Ronen Amiel",
   "license": "MIT",
+  "scripts": {
+    "start": "node src/minipack.js",
+    "clean": "rm example/transpiled-*.js example/bundle.js"
+  },
   "dependencies": {
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
